--- a/index.html
+++ b/index.html
@@ -5,28 +5,52 @@
 	<link href="resources/css/style.css" rel="stylesheet" type="text/css" >
 </head>
 <body>
-	<h1>Broadway Design</h1>
-	<nav>
+	<div class="header">
+		<h1>Broadway Design</h1>
+		<nav>
+			<a href="">Home</a><br><br>
+			<a href="">Process</a><br><br>
+			<a href="">Work</a><br><br>
+			<a href="">Team</a><br><br>
+			<a href="">Contact</a><br><br>
+		</nav>
+	</div>
+
+	<h2>Our Process</h2>
+	
+	<img src="images/identify.svg" />
+	<h3>Identify</h3>
+	<p>We focus on the most important details.</p>
+	
+	<img src="images/understand.svg" />
+	<h3>Understand</h3>
+	<p>We study our projects inside and out.</p>
+
+	<img src="images/execute.svg" />
+	<h3>Execute</h3>
+	<p>We put everything we have into our work.</p>
+
+	<h4>Designed in New York</h4>
+
+	<h3>Portfolio</h3>
+	<p>Coming Soon</p>
+
+	<h3>Team</h3>
+	<p>We're Hiring!</p>
+
+	<h3>Contact</h3>
+	<p>Phone: (555)-555-5555</p>
+	<p>E-mail: test@example.com</p>
+	<p>Twitter: @test</p>
+
+	<div class="footer">
+		© Broadway 2017
 		<a href="">Home</a>
-		<a href="">Process</a>
+		<a href="">About</a>
 		<a href="">Work</a>
 		<a href="">Team</a>
 		<a href="">Contact</a>
-	</nav>
-	<br>
-	<video src="videos/excursion.mp4" type="video/mp4" autoplay="" loop muted></video>
-
-	<h2> Your personal travel guide</h2>
-	<p> Excursion remembers places you like, and recommends new points of interest around you.</p>
-	<img src=" images/camp.jpg" />
-	<br>
-	<br>
-	<img src=" images/phone.png" />
-	<h2> Coming soon for iPhone and Android</h2>
-	<a href="">Download Excursion (Coming Soon!)</a>
-	<br>
-	<p class="footer">© Excursion</p>
-
+	</div>
 
 </body>
 
